# GPyS

./: .gitignore  GPyS_prediction_script.py  GPyS_script.ipynb  GPyS_working_script.py  LICENSE  LOOCV_script.py  README.md  example_G12.py  pyproject.toml
src/GPyS/: GPyS_LOOCV_error.py  GPyS_prediction.py  GPyS_preprocessor.py
src/GPyS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/GPyS_LOOCV_error/: GPyS_LOOCV_error.py  GPyS_anemometer.py  LOOCV_script.py  __init__.py
src/GPyS_LOOCV_error/GPyS_Anenometer/: README.txt
src/GPyS_prediction/: GPyS_prediction.py  __init__.py
src/GPyS_preprocessor/: GPyS_preprocessor.py  __init__.py
src/GPyS_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
